[tool.poetry]
name = "dev-performance-analysis"
version = "0.1.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
tabulate = "^0.9.0"
flake8 = "^7.3.0"
mypy = "^1.18.2"
pytest = "^9.0.1"
types-tabulate = "^0.9.0.20241207"
pytest-cov = "^7.0.0"
flake8-pyproject = "^1.2.4"

[tool.mypy]
python_version = 3.12
disallow_untyped_defs = true
exclude = [".git", ".pytest_cache", ".idea", ".mypy_cache"]

[tool.flake8]
max-line-length = 90

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
